--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Version 43 - Sticky header + sticky stats/tabs/filters section -->
+<!-- Version 47 - Force column headers with inline styles -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>
     <style>
         *{margin:0;padding:0;box-sizing:border-box}
-        body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:#f8fafc;font-size:14px}
+        body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:#fafbfc;font-size:14px}
         .hidden{display:none !important}
         .app{display:none}
         .login-screen{display:flex;align-items:center;justify-content:center;min-height:100vh;background:linear-gradient(135deg,#2563eb 0%,#1d4ed8 100%)}
@@ -19,7 +19,7 @@
         .login-btn:hover{background:#1d4ed8}
         .header{background:#2563eb;color:#fff;padding:16px 32px;display:none;justify-content:space-between;align-items:center;box-shadow:0 2px 10px rgba(0,0,0,0.15);height:64px;position:-webkit-sticky;position:sticky;top:0;z-index:9999}
         .header.visible{display:flex}
-        .sticky-section{position:-webkit-sticky;position:sticky;top:64px;z-index:100;background:#f8fafc;padding:24px 0 20px 0;box-shadow:0 2px 4px rgba(0,0,0,0.05)}
+        .sticky-section{position:-webkit-sticky;position:sticky;top:64px;z-index:100;background:#fafbfc;padding:24px 0 20px 0;box-shadow:0 2px 4px rgba(0,0,0,0.03)}
         .header h1{font-size:20px;font-weight:600;display:flex;align-items:center;gap:10px}
         .header-right{display:flex;gap:12px;align-items:center}
         .search-box{position:relative}
@@ -30,7 +30,7 @@
         .new-btn:hover{background:#f8fafc}
         .user-badge{display:flex;align-items:center;gap:10px;cursor:pointer;padding:6px 12px;border-radius:8px;background:rgba(255,255,255,0.15)}
         .user-badge .avatar{width:32px;height:32px;border-radius:50%;background:#fff;color:#2563eb;display:flex;align-items:center;justify-content:center;font-weight:600;font-size:12px}
-        .main{padding:0 32px 24px 32px;max-width:1800px;margin:0 auto}
+        .main{padding:24px 32px;max-width:1800px;margin:0 auto}
         .stats{display:grid;grid-template-columns:repeat(6,1fr);gap:16px;margin-bottom:20px}
         .stat{padding:20px;border-radius:12px;cursor:pointer;transition:all 0.2s;border:1px solid #e5e7eb;background:#fff}
         .stat:hover{transform:translateY(-2px);box-shadow:0 8px 25px rgba(0,0,0,0.08)}
@@ -42,7 +42,7 @@
         .stat.teal{border-left:4px solid #14b8a6}.stat.teal .num{color:#14b8a6}
         .stat.rose{border-left:4px solid #f43f5e}.stat.rose .num{color:#f43f5e}
         .stat.green{border-left:4px solid #22c55e}.stat.green .num{color:#22c55e}
-        .tabs{background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.04);border:1px solid #e5e7eb}
+        .tabs{background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.04);border:1px solid #e5e7eb;margin-bottom:20px}
         .tab-row{display:flex;border-bottom:1px solid #e5e7eb;padding:0 8px}
         .tab{padding:14px 20px;cursor:pointer;border-bottom:2px solid transparent;font-weight:500;font-size:13px;color:#64748b;display:flex;align-items:center;gap:8px;transition:all 0.15s}
         .tab:hover{color:#3b82f6;background:#f8fafc}
@@ -56,9 +56,11 @@
         .filters select:focus{outline:none;border-color:#3b82f6;box-shadow:0 0 0 3px rgba(59,130,246,0.1)}
         .filters label{display:flex;align-items:center;gap:6px;font-size:13px;cursor:pointer;color:#475569;font-weight:400}
         .filters label input{width:16px;height:16px;accent-color:#3b82f6}
-        .grid{background:#fff;border-radius:16px;box-shadow:0 4px 20px rgba(0,0,0,0.06);border:1px solid #e5e7eb;overflow:hidden}
+        .grid{background:#fff;border-radius:16px;box-shadow:0 4px 20px rgba(0,0,0,0.06);border:1px solid #e5e7eb;overflow:hidden;position:relative;z-index:1}
         .grid-table{width:100%;border-collapse:collapse}
-        .grid-table th{padding:14px 16px;background:#e2e8f0;font-size:11px;font-weight:600;color:#334155;text-transform:uppercase;letter-spacing:0.5px;text-align:center;white-space:nowrap;border-bottom:2px solid #cbd5e1}
+        .grid-table thead{display:table-header-group}
+        .grid-table thead tr{display:table-row}
+        .grid-table th{display:table-cell;padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase;letter-spacing:0.5px;text-align:center;white-space:nowrap;border-bottom:2px solid #e2e8f0}
         .grid-table th:first-child{text-align:left;padding-left:24px}
         .grid-table th:last-child{padding-right:24px}
         .grid-table th.premium-col{text-align:right}
@@ -164,39 +166,37 @@
     <header id="appHeader" class="header"><h1>📋 Policy Management</h1><div class="header-right"><div class="search-box"><input type="text" id="search" placeholder="Search policies..." oninput="filter()"></div><button class="new-btn" onclick="refreshData()" title="Refresh data">🔄</button><button class="new-btn" onclick="newPolicy()">+ New Policy</button><div class="user-badge" onclick="signOut()"><div class="avatar" id="userAvatar">?</div><span id="userName">User</span></div></div></header>
     <div id="app" class="app">
         <main class="main">
-            <div class="sticky-section">
-                <div class="stats">
-                    <div class="stat red" onclick="filterStat('pastDue')"><div class="num" id="sPastDue">0</div><div class="label">Past Due</div></div>
-                    <div class="stat orange" onclick="filterStat('dueWeek')"><div class="num" id="sDueWeek">0</div><div class="label">Due This Week</div></div>
-                    <div class="stat gray" onclick="filterStat('progress')"><div class="num" id="sProgress">0</div><div class="label">In Progress</div></div>
-                    <div class="stat teal" onclick="filterStat('billing')"><div class="num" id="sBilling">0</div><div class="label">In Billing</div></div>
-                    <div class="stat rose" onclick="filterStat('billPast')"><div class="num" id="sBillPast">0</div><div class="label">Billing Past Due</div></div>
-                    <div class="stat green" onclick="filterStat('unassign')"><div class="num" id="sUnassign">0</div><div class="label">Unassigned</div></div>
+            <div class="stats">
+                <div class="stat red" onclick="filterStat('pastDue')"><div class="num" id="sPastDue">0</div><div class="label">Past Due</div></div>
+                <div class="stat orange" onclick="filterStat('dueWeek')"><div class="num" id="sDueWeek">0</div><div class="label">Due This Week</div></div>
+                <div class="stat gray" onclick="filterStat('progress')"><div class="num" id="sProgress">0</div><div class="label">In Progress</div></div>
+                <div class="stat teal" onclick="filterStat('billing')"><div class="num" id="sBilling">0</div><div class="label">In Billing</div></div>
+                <div class="stat rose" onclick="filterStat('billPast')"><div class="num" id="sBillPast">0</div><div class="label">Billing Past Due</div></div>
+                <div class="stat green" onclick="filterStat('unassign')"><div class="num" id="sUnassign">0</div><div class="label">Unassigned</div></div>
+            </div>
+            <div class="tabs">
+                <div class="tab-row">
+                    <div class="tab active" data-tab="myPolicy" onclick="switchTab('myPolicy')">📋 My Policies<span class="count" id="tMyPol">0</span></div>
+                    <div class="tab" data-tab="myBilling" onclick="switchTab('myBilling')">💰 My Billing<span class="count" id="tMyBil">0</span></div>
+                    <div class="tab-divider"></div>
+                    <div class="tab" data-tab="allPolicy" onclick="switchTab('allPolicy')">📋 All Policies<span class="count" id="tAllPol">0</span></div>
+                    <div class="tab" data-tab="allBilling" onclick="switchTab('allBilling')">💰 All Billing<span class="count" id="tAllBil">0</span></div>
+                    <div class="tab" data-tab="archived" onclick="switchTab('archived')">📁 Archived<span class="count" id="tArch">0</span></div>
                 </div>
-                <div class="tabs">
-                    <div class="tab-row">
-                        <div class="tab active" data-tab="myPolicy" onclick="switchTab('myPolicy')">📋 My Policies<span class="count" id="tMyPol">0</span></div>
-                        <div class="tab" data-tab="myBilling" onclick="switchTab('myBilling')">💰 My Billing<span class="count" id="tMyBil">0</span></div>
-                        <div class="tab-divider"></div>
-                        <div class="tab" data-tab="allPolicy" onclick="switchTab('allPolicy')">📋 All Policies<span class="count" id="tAllPol">0</span></div>
-                        <div class="tab" data-tab="allBilling" onclick="switchTab('allBilling')">💰 All Billing<span class="count" id="tAllBil">0</span></div>
-                        <div class="tab" data-tab="archived" onclick="switchTab('archived')">📁 Archived<span class="count" id="tArch">0</span></div>
-                    </div>
-                    <div class="filters">
-                        <select id="fStatus" onchange="filter()"><option value="">All Statuses</option></select>
-                        <select id="fAssignee" onchange="filter()"><option value="">All Assignees</option></select>
-                        <select id="fType" onchange="filter()"><option value="">All Types</option></select>
-                        <select id="fTransType" onchange="filter()"><option value="">All Transactions</option><option value="Renewal">Renewal</option><option value="New Business">New Business</option></select>
-                        <select id="fBizType" onchange="filter()"><option value="">All Business</option><option value="CL">CL - Commercial</option><option value="PL">PL - Personal</option></select>
-                        <label><input type="checkbox" id="fUnassigned" onchange="filter()"> Unassigned Only</label>
-                        <label><input type="checkbox" id="fShowAll" onchange="filter()"> Show All Dates</label>
-                    </div>
+                <div class="filters">
+                    <select id="fStatus" onchange="filter()"><option value="">All Statuses</option></select>
+                    <select id="fAssignee" onchange="filter()"><option value="">All Assignees</option></select>
+                    <select id="fType" onchange="filter()"><option value="">All Types</option></select>
+                    <select id="fTransType" onchange="filter()"><option value="">All Transactions</option><option value="Renewal">Renewal</option><option value="New Business">New Business</option></select>
+                    <select id="fBizType" onchange="filter()"><option value="">All Business</option><option value="CL">CL - Commercial</option><option value="PL">PL - Personal</option></select>
+                    <label><input type="checkbox" id="fUnassigned" onchange="filter()"> Unassigned Only</label>
+                    <label><input type="checkbox" id="fShowAll" onchange="filter()"> Show All Dates</label>
                 </div>
             </div>
             <div class="grid">
                 <div class="pagination" id="paginationTop" style="display:none;border-bottom:1px solid #e5e7eb;border-radius:16px 16px 0 0;background:#fff"><div id="pageInfoTop"></div><div id="pageBtnsTop"></div></div>
                 <table class="grid-table" id="gridTable">
-                    <thead id="gridHeader"></thead>
+                    <thead id="gridHeader"><tr style="background:#f1f5f9"><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase;text-align:left;padding-left:24px">POLICY</th><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase">AMS</th><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase">DUE DATE</th><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase">STATUS</th><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase">ASSIGNED TO</th><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase">EFF DATE</th><th style="padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase;text-align:right">PREMIUM</th><th style="padding:14px 16px;background:#f1f5f9"></th></tr></thead>
                     <tbody id="gridBody"><tr><td colspan="8" class="loading"><div class="spinner"></div>Loading policies...</td></tr></tbody>
                 </table>
                 <div class="pagination" id="pagination" style="display:none"><div id="pageInfo"></div><div id="pageBtns"></div></div>
@@ -445,10 +445,11 @@ function render(){
     
     // Update header with table row
     const header=document.getElementById('gridHeader');
+    const thStyle='padding:14px 16px;background:#f1f5f9;font-size:11px;font-weight:600;color:#475569;text-transform:uppercase;text-align:center;white-space:nowrap;border-bottom:2px solid #e2e8f0';
     if(isBillingTab){
-        header.innerHTML='<tr><th>POLICY</th><th>AMS</th><th>DUE DATE</th><th>POLICY STATUS</th><th>BILLING STATUS</th><th>ASSIGNED TO</th><th>EFF DATE</th><th class="premium-col">PREMIUM</th><th></th></tr>';
+        header.innerHTML=`<tr style="background:#f1f5f9"><th style="${thStyle};text-align:left;padding-left:24px">POLICY</th><th style="${thStyle}">AMS</th><th style="${thStyle}">DUE DATE</th><th style="${thStyle}">POLICY STATUS</th><th style="${thStyle}">BILLING STATUS</th><th style="${thStyle}">ASSIGNED TO</th><th style="${thStyle}">EFF DATE</th><th style="${thStyle};text-align:right">PREMIUM</th><th style="${thStyle}"></th></tr>`;
     }else{
-        header.innerHTML='<tr><th>POLICY</th><th>AMS</th><th>DUE DATE</th><th>STATUS</th><th>ASSIGNED TO</th><th>EFF DATE</th><th class="premium-col">PREMIUM</th><th></th></tr>';
+        header.innerHTML=`<tr style="background:#f1f5f9"><th style="${thStyle};text-align:left;padding-left:24px">POLICY</th><th style="${thStyle}">AMS</th><th style="${thStyle}">DUE DATE</th><th style="${thStyle}">STATUS</th><th style="${thStyle}">ASSIGNED TO</th><th style="${thStyle}">EFF DATE</th><th style="${thStyle};text-align:right">PREMIUM</th><th style="${thStyle}"></th></tr>`;
     }
     
     if(!items.length){body.innerHTML='<tr><td colspan="'+(isBillingTab?9:8)+'" style="text-align:center;padding:40px;color:#6b7280">No policies found</td></tr>';document.getElementById('pagination').style.display='none';document.getElementById('paginationTop').style.display='none';return}
