--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Version 56 - Added auto-refresh version check -->
+<!-- Version 57 - Added one-time force refresh mechanism -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,21 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Policy Management</title>
+    <script>
+    // ONE-TIME FORCE REFRESH - Change this number to force all users to refresh
+    var FORCE_REFRESH_VERSION = 57;
+    (function(){
+        var key = 'pm_force_refresh_v';
+        var lastForced = localStorage.getItem(key);
+        if(!lastForced || parseInt(lastForced) < FORCE_REFRESH_VERSION){
+            localStorage.setItem(key, FORCE_REFRESH_VERSION);
+            // Only force refresh if this isn't already a cache-busted request
+            if(location.search.indexOf('_forceRefresh=') === -1){
+                location.replace(location.pathname + '?_forceRefresh=' + FORCE_REFRESH_VERSION + '&_t=' + Date.now());
+            }
+        }
+    })();
+    </script>
     <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -275,14 +290,14 @@
             </div>
         </main>
         
-        <footer class="footer">🔒 Data stored in SharePoint | <span id="appVersion">v56</span></footer>
+        <footer class="footer">🔒 Data stored in SharePoint | <span id="appVersion">v57</span></footer>
     </div>
     <div class="panel-bg" id="panelBg" onclick="closePanel()"></div>
     <div class="panel" id="panel"><div class="panel-header"><h2 id="panelTitle">Policy Details</h2><button class="panel-close" onclick="closePanel()">×</button></div><div class="panel-body" id="panelBody"></div><div class="panel-footer"><button class="btn btn-cancel" onclick="closePanel()">Cancel</button><button class="btn btn-save" onclick="save()">Save Changes</button></div></div>
     <div class="toast" id="toast"></div>
 <script>
 // App Version - increment this when deploying updates
-const APP_VERSION = 56;
+const APP_VERSION = 57;
 
 // Version check - runs on page load to detect updates
 (function checkForUpdates(){
